--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
+	"id": "iterat",
+	"name": "Iterat",
+	"version": "0.0.1",
+	"minAppVersion": "0.18.0",
+	"description": "return to your notes - spaced repetition, incremental writing, or weekly review",
+	"author": "David Lee",
+	"authorUrl": "https://github.com/davidlee",
 	"fundingUrl": "https://obsidian.md/pricing",
 	"isDesktopOnly": false
 }
